--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
-    implementation 'com.github.HarkerRobo:HarkerRoboLib:-SNAPSHOT'
+    implementation 'com.github.HarkerRobo:HarkerRoboLib:7ea2247'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
